# iot-exploratory-26

./: README.md
demo/buzzer_demo/: CMakeLists.txt
demo/buzzer_demo/src/: main.c
demo/esp32_actuator_demo/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32actuator
demo/esp32_sensor_demo/: CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32dev
demo/esp32_sensor_demo/components/sensor_hub/: CMakeLists.txt  app_state.c  buzzer.c  mqtt_manager.c  oled_driver.c  sensor_hub.c  sensors.c  splash_assets.c  status.c  ui.c  utils.c  wifi_manager.c
demo/esp32_sensor_demo/components/sensor_hub/include/: app_state.h  buzzer.h  mqtt_manager.h  oled_driver.h  pin_config.h  sensor_hub.h  sensors.h  splash_assets.h  status.h  ui.h  utils.h  wifi_manager.h
demo/esp32_sensor_demo/components/sensor_hub/tools/: png_to_splash.js
demo/esp32_sensor_demo/components/u8g2/: CMakeLists.txt
demo/esp32c3_demo/: CMakeLists.txt  platformio.ini
demo/rpi_gateway/: README.md  pyproject.toml
demo/rpi_gateway/config/: gateway.toml
demo/rpi_gateway/docs/: RPI_MQTT_NTP_SETUP.md
demo/rpi_gateway/scripts/: monitor_actuator_mqtt.sh  setup_rpi_workshop.sh  test_actuator_mqtt.sh  validate_rpi_workshop.sh
demo/rpi_gateway/src/gateway/: cli.py  cloud_pubsub.py  config.py  logging_setup.py  metrics.py  models.py  mqtt_bridge.py  observability.py  service.py  simulator.py  spool.py  topic_parser.py
demo/rpi_gateway/tests/: test_topic_parser.py
lecture/: 00_DataAnalytics_and_AI_for_IoT.md  01_Setup_GPT_API.txt
lecture/examples/: api_callto_gemini.py  api_callto_openai.py  main_script.py  simple_api_server.py
tutorial/: 00_workshop_overview.md  esp32_rpi_bluetooth_gcp_tutorial.md  esp32_to_rpi_mqtt_tutorial.md  gcp_workshop_setup.md  google_cloud_iot_workshop_tutorial.md
tutorial/sensor/: air_quality_sensor_mq_135_tutorial.md  humidity_sensor_dht_22_am_2302_tutorial.md  ultrasonic_distance_sensor_hc_sr04_tutorial.md
tutorial/ui_ux/: active_buzzer_ky_012_tutorial.md  grove_ssd1315_oled_esp32_tutorial.md  (+3 more)
(+57 files in other folders)
